--- a/dropboxserver/package.json
+++ b/dropboxserver/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.4",
     "ejs": "*",
     "express": "3.2.6",
+    "kafka-node": "^2.2.3",
     "mime-types": "^2.1.17",
     "multer": "^1.3.0",
     "mv": "^2.1.1",
