--- a/kafka-backend/package.json
+++ b/kafka-backend/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^1.0.3",
+    "kafka-node": "^2.2.3",
+    "mysql": "^2.15.0"
+  }
 }
