--- a/dropboxserver/package.json
+++ b/dropboxserver/package.json
@@ -10,14 +10,19 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "client-sessions": "^0.8.0",
+    "connect-mongo": "^1.3.2",
     "cors": "^2.8.4",
     "ejs": "*",
     "express": "3.2.6",
+    "express-session": "^1.15.6",
     "kafka-node": "^2.2.3",
     "mime-types": "^2.1.17",
+    "mongodb": "^2.2.33",
     "multer": "^1.3.0",
     "mv": "^2.1.1",
     "mysql": "^2.15.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "request": "^2.83.0"
   },
   "devDependencies": {
