--- a/kafka-backend/package.json
+++ b/kafka-backend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "kafka-node": "^2.2.3",
-    "mysql": "^2.15.0"
+    "mime-types": "^2.1.17",
+    "mysql": "^2.15.0",
+    "rimraf": "^2.6.2"
   }
 }
