--- a/dropboxclient/package.json
+++ b/dropboxclient/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.0.14",
+    "react-svg-piechart": "^1.4.0",
     "reactstrap": "^5.0.0-alpha.3",
     "redux": "^3.7.2",
     "redux-persist": "^4.10.1",
