--- a/kafka-backend/package.json
+++ b/kafka-backend/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^1.0.3",
     "kafka-node": "^2.2.3",
     "mime-types": "^2.1.17",
+    "mongoose": "^4.13.1",
     "mysql": "^2.15.0",
     "rimraf": "^2.6.2"
   }
