--- a/dropboxserver/package.json
+++ b/dropboxserver/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "test": "mocha"
+    "test": "mocha --timeout 15000"
   },
   "dependencies": {
     "bcrypt": "^1.0.3",
